# Melody2Chord

./: .gitignore  README.md  READMEKR.md  pyproject.toml  run_web_ui.bat
src/py2fl/: __init__.py  arrangement.py  audio.py  cli.py  generator.py  i18n.py  library.py  llm.py  melody.py  midi.py  models.py  music_theory.py  progression.py  reaper.py  settings.py  text_analysis.py  web.py
tests/: test_audio.py  test_generate.py  test_i18n.py  test_library.py  test_llm.py  test_reaper.py  test_settings.py
