[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "py2fl"
version = "0.1.0"
description = "Text and melody driven MIDI generator for FL Studio workflows."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "OpenAI Codex" }]

[project.scripts]
py2fl = "py2fl.cli:main"
py2fl-web = "py2fl.web:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
